--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "dotenv": "^8.2.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0"
+  }
 }
