added logo and functionality error when mo match

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.5.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
